--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "dependencies": {
     "@material-ui/core": "^4.12.4",
-    "@material-ui/icons": "^4.11.3",
-    "dotenv": "^16.0.1"
+    "@material-ui/icons": "^4.11.3"
+  },
+  "devDependencies": {
+    "dotenv": "^16.0.3"
   }
 }
